--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
   <head>
     <meta charset="UTF-8">
     <script src="script.js"></script>
-    <!-- <link rel="stylesheet" type="text/css" href="styles.css"> -->
+    <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
-  <body>
-    <h1><em>Hola!</em> a todos</h1>
-    <h2>Receta de pastel de papas</h2>
-    
 
-    <h3> - Ingredientes:</h3>
+  <body>
+    <h1>Receta de pastel de papas</h1>
+
+    <img src="https://canalcocina.es/medias/_cache/zoom-6ac28acfbd829fbf07d8cf2dbe10405f-920-518.jpg"alt="Pastel de papas">
+
+    <h2> - Ingredientes:</h2>
 
     <p><b>Básicos:</b></p>
     <ol>
