--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
 
   <body>
-    <h1>Receta de pastel de papas</h1>
+    <h1 class="borde-rojo">Receta de pastel de papas</h1>
 
     <img src="https://canalcocina.es/medias/_cache/zoom-6ac28acfbd829fbf07d8cf2dbe10405f-920-518.jpg"alt="Pastel de papas">
 
